[gd_scene load_steps=8 format=3 uid="uid://dlntpm6g874d5"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_1d2ei"]
[ext_resource type="PackedScene" uid="uid://dloqxds0o1xhx" path="res://scenes/frab.tscn" id="1_x22vj"]
[ext_resource type="PackedScene" uid="uid://bgiy2lvqndgn2" path="res://scenes/tilemap.tscn" id="2_vm56o"]
[ext_resource type="Texture2D" uid="uid://isyebqe8cjmc" path="res://bg.jpg" id="4_jjr3w"]
[ext_resource type="PackedScene" uid="uid://d21rmqeohya44" path="res://scenes/sign.tscn" id="5_rp4rd"]
[ext_resource type="PackedScene" uid="uid://dmxetnochjt6n" path="res://scenes/sign_bird.tscn" id="6_x3w0y"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mvbh2"]

[node name="Game" type="Node"]
script = ExtResource("1_1d2ei")

[node name="Frab" parent="." instance=ExtResource("1_x22vj")]
z_index = 10
position = Vector2(243, 372)

[node name="Camera2D" type="Camera2D" parent="Frab"]
offset = Vector2(0, -32)
zoom = Vector2(4, 4)
limit_bottom = 514
position_smoothing_enabled = true
position_smoothing_speed = 15.0
drag_vertical_enabled = true
drag_top_margin = 0.5
drag_bottom_margin = 0.1

[node name="ColorRect" type="ColorRect" parent="Frab/Camera2D"]
visible = false
anchors_preset = -1
offset_left = -160.0
offset_top = -122.0
offset_right = 160.0
offset_bottom = 58.0

[node name="Tilemap" parent="." instance=ExtResource("2_vm56o")]
z_index = 5
position = Vector2(243, 404)

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.5, 1)
scroll_offset = Vector2(175, 376)
repeat_size = Vector2(1024, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(337, -120)
texture = ExtResource("4_jjr3w")

[node name="Signs" type="Node2D" parent="."]
z_index = 7

[node name="Sign" parent="Signs" instance=ExtResource("5_rp4rd")]
position = Vector2(293, 370)
normal_string = "Hello to the game! Dodge the bushes if you don't wanna get hurt!"
alt_string = "There is nothing there."

[node name="Sign2" parent="Signs" instance=ExtResource("5_rp4rd")]
position = Vector2(522, 354)
normal_string = "Look at the birds and the flowers. What kind of tiles should you avoid?"
alt_string = "In this mode, you need none of those. You see the truth."

[node name="Birds" type="Node2D" parent="."]

[node name="Sign_Bird" parent="Birds" instance=ExtResource("6_x3w0y")]
position = Vector2(365, 386)

[node name="Sign_Bird2" parent="Birds" instance=ExtResource("6_x3w0y")]
position = Vector2(628, 337)

[node name="Sign_Bird3" parent="Birds" instance=ExtResource("6_x3w0y")]
position = Vector2(704, 256)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(442, 514)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("WorldBoundaryShape2D_mvbh2")

[node name="Node" type="Node" parent="."]

[node name="HurtTimer" type="Timer" parent="Node"]
wait_time = 4.0

[node name="PillTimer" type="Timer" parent="Node"]
wait_time = 10.0

[connection signal="isHurt" from="Frab" to="." method="_on_frab_is_hurt"]
[connection signal="body_entered" from="Area2D" to="Frab" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Node/HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="Node/PillTimer" to="." method="_on_pill_timer_timeout"]
